<resources>
    <string name="about_activity_bt_mac_addr_title">Bluetooth Mac Address:</string>
    <string name="about_activity_device_id_title">Device ID:</string>
    <string name="about_activity_firmware_title">Firmware:</string>
    <string name="about_activity_hw_model_title">HW model:</string>
    <string name="about_activity_no_user_name">Add V650 in flow.polar.com</string>
    <string name="about_activity_owner_title">Owner:</string>
    <string name="about_activity_sw_release_title">SW Release:</string>
    <string name="about_device_title">ABOUT</string>
    <string name="activity_enter_pin_title">ENTER PIN</string>
    <string name="activity_hr_zones_title">HR ZONES</string>
    <string name="activity_re_enter_pin_title">RE-ENTER PIN</string>
    <string name="altitude_calibration_complete">Altitude calibration complete</string>
    <string name="auto_lap_activity_title">AUTOMATIC LAP</string>
    <string name="auto_lap_threshold_distance">DISTANCE</string>
    <string name="auto_lap_threshold_duration">DURATION</string>
    <string name="auto_pause_activity_title">AUTOMATIC PAUSE</string>
    <string name="auto_pause_value_pace_title">Activation pace</string>
    <string name="auto_pause_value_title">SPEED THRESHOLD</string>
    <string name="backlight_activity_title">BACKLIGHT</string>
    <string name="backlight_always_on">ALWAYS ON</string>
    <string name="backlight_auto_treshold">AUTO FRONTLIGHT THRESHOLD</string>
    <string name="backlight_automatic">AUTOMATIC</string>
    <string name="backlight_normal">NORMAL</string>
    <string name="bike1">BIKE 1</string>
    <string name="bike2">BIKE 2</string>
    <string name="bike3">BIKE 3</string>
    <string name="bike4">BIKE 4</string>
    <string name="bike_settings_activity_title">BIKE SETTINGS</string>
    <string name="button_continue">CONTINUE</string>
    <string name="button_no">NO</string>
    <string name="button_stop">STOP</string>
    <string name="button_yes">YES</string>
    <string name="cadence_sensor_battery_low">Cadence sensor battery low</string>
    <string name="calibrate_sensors_dialog_text">"CALIBRATION MESSAGE"</string>
    <string name="choose_bike_activity_title">Choose bike</string>
    <string name="choose_profile_activity_title">Choose profile</string>
    <string name="customize_hr_zone_activity_title">ZONE %1$d</string>
    <string name="customize_hr_zone_lower_limit_title">LOWER LIMIT</string>
    <string name="customize_hr_zone_upper_limit_title">UPPER LIMIT</string>
    <string name="customize_power_zone_activity_title">ZONE %1$d</string>
    <string name="customize_power_zone_lower_limit_title">LOWER LIMIT [%1$s]</string>
    <string name="customize_power_zone_upper_limit_title">UPPER LIMIT [%1$s]</string>
    <string name="customize_sport_profile_auto_lap_off">Off</string>
    <string name="customize_sport_profile_auto_lap_on">On</string>
    <string name="customize_sport_profile_auto_lap_title">AUTOMATIC LAP</string>
    <string name="customize_sport_profile_auto_pause_off">Off</string>
    <string name="customize_sport_profile_auto_pause_on">On</string>
    <string name="customize_sport_profile_auto_pause_title">AUTOMATIC PAUSE</string>
    <string name="customize_sport_profile_check_power_zone_limits">Check Power zone limits</string>
    <string name="customize_sport_profile_check_zone_limits">Check HR zone limits</string>
    <string name="customize_sport_profile_front_button_lap_off">OFF</string>
    <string name="customize_sport_profile_front_button_lap_on">ON</string>
    <string name="customize_sport_profile_front_button_lap_title">FRONT BUTTON TAKES LAP</string>
    <string name="customize_sport_profile_gps_normal">ON</string>
    <string name="customize_sport_profile_gps_off">OFF</string>
    <string name="customize_sport_profile_gps_title">GPS</string>
    <string name="customize_sport_profile_hr_view_bmp">BPM</string>
    <string name="customize_sport_profile_hr_view_percent_of_max">%</string>
    <string name="customize_sport_profile_hr_view_title">HR VIEW</string>
    <string name="customize_sport_profile_power_settings">Power settings</string>
    <string name="customize_sport_profile_sounds_title">TRAINING SOUNDS</string>
    <string name="customize_sport_profile_speed_title">SPEED</string>
    <string name="customize_sport_profile_training_views_title">TRAINING VIEWS</string>
    <string name="customize_training_views_title">%1$s (%2$s)</string>
    <string name="customize_trainingviews_tip_dialog_button_text">CLOSE</string>
    <string name="customize_trainingviews_tip_dialog_text">Tip: you can swipe left and right to find more layouts.</string>
    <string name="date_day_text">DD</string>
    <string name="date_month_text">MM</string>
    <string name="date_separator">/</string>
    <string name="date_year_text">YY</string>
    <string name="delete_pairing_text">DELETE PAIRING?</string>
    <string name="delete_session_title">Delete session?</string>
    <string name="device_settings_auto_power_off">AUTOMATIC POWER OFF</string>
    <string name="device_settings_auto_power_off_off">OFF</string>
    <string name="device_settings_auto_power_off_on">ON</string>
    <string name="device_settings_back_light">BACKLIGHT</string>
    <string name="device_settings_front_led">FRONT LIGHT</string>
    <string name="dialog_calibrate">CALIBRATE</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_delete">DELETE</string>
    <string name="dialog_invalid_pin">Invalid PIN</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_pins_is_not_same">"PINs don't match"</string>
    <string name="dialog_synchronizing">Synchronizing</string>
    <string name="dialog_turn_off_device_confirmation_text">Turn off V650?</string>
    <string name="enter_auto_lap_distance">km</string>
    <string name="enter_auto_lap_duration">mm:ss</string>
    <string name="exercise_10s_avg_title">10S AVG</string>
    <string name="exercise_30s_avg_title">30S AVG</string>
    <string name="exercise_3s_avg_title">3S AVG</string>
    <string name="exercise_air_pressure">BAROMETRIC PRESSURE</string>
    <string name="exercise_altitude_title">ALTITUDE</string>
    <string name="exercise_ascent_title">ASCENT</string>
    <string name="exercise_avg_power">AVG POWER</string>
    <string name="exercise_backtostart_title">BACK TO START</string>
    <string name="exercise_cadence_avg">CADENCE AVG</string>
    <string name="exercise_cadence_title">CADENCE</string>
    <string name="exercise_calories_title">CALORIES</string>
    <string name="exercise_current_left_right_balance_title">Left/right balance [%1$s]</string>
    <string name="exercise_current_power">POWER</string>
    <string name="exercise_current_power_left">POWER LEFT</string>
    <string name="exercise_current_power_right">POWER RIGHT</string>
    <string name="exercise_custom_avg_title">%dS AVG</string>
    <string name="exercise_decline_title">DECLINE</string>
    <string name="exercise_descent_title">DESCENT</string>
    <string name="exercise_distance_title">DISTANCE</string>
    <string name="exercise_duration_title">DURATION</string>
    <string name="exercise_heading_title">HEADING</string>
    <string name="exercise_hr_avg">HR AVG</string>
    <string name="exercise_hr_lap_max">HR LAP MAX</string>
    <string name="exercise_hr_max_title">HR MAX</string>
    <string name="exercise_hr_title">HR</string>
    <string name="exercise_incline_title">INCLINE</string>
    <string name="exercise_lap_avg">LAP AVG</string>
    <string name="exercise_lap_hr_avg">LAP HR AVG</string>
    <string name="exercise_lap_left_right_balance_numeric_title">Lap left/right balance [%1$s]</string>
    <string name="exercise_lap_left_right_balance_title">Lap left/right balance [%1$s]</string>
    <string name="exercise_lap_max">LAP MAX</string>
    <string name="exercise_lap_max_power">MAX LAP POWER</string>
    <string name="exercise_left_right_balance_custom_title">Left/right balance %1$dS [%2$s]</string>
    <string name="exercise_left_right_balance_numeric_custom_title">Left/right balance %1$dS [%2$s]</string>
    <string name="exercise_left_right_balance_numeric_title">Left/right balance [%1$s]</string>
    <string name="exercise_max_force_left">MAX FORCE LEFT</string>
    <string name="exercise_max_force_right">MAX FORCE RIGHT</string>
    <string name="exercise_max_force_title">FORCE</string>
    <string name="exercise_max_lap_pace_title">MAX LAP PACE</string>
    <string name="exercise_max_lap_speed_title">MAX LAP SPEED</string>
    <string name="exercise_max_pace_title">MAX PACE</string>
    <string name="exercise_max_power">MAX POWER</string>
    <string name="exercise_max_speed_title">MAX SPEED</string>
    <string name="exercise_pace_avg">PACE AVG</string>
    <string name="exercise_pace_title">PACE</string>
    <string name="exercise_positive_force_time_title">+ FORCE</string>
    <string name="exercise_session_left_right_balance_numeric_title">Session left/right balance [%1$s]</string>
    <string name="exercise_session_left_right_balance_title">Session left/right balance [%1$s]</string>
    <string name="exercise_speed_avg">SPEED AVG</string>
    <string name="exercise_speed_title">SPEED</string>
    <string name="exercise_temperature_title">TEMPERATURE</string>
    <string name="exercise_time_of_day_title">TIME OF DAY</string>
    <string name="exercise_vam_title">VAM</string>
    <string name="front_led_activity_title">FRONT LIGHT</string>
    <string name="front_led_auto_treshold">AUTO FRONTLIGHT THRESHOLD</string>
    <string name="front_led_automatic">AUTOMATIC</string>
    <string name="front_led_blink_rate">BLINK RATE</string>
    <string name="front_led_manual">MANUAL</string>
    <string name="front_led_widget_title">FRONT LIGHT</string>
    <string name="ftu_title_date">DATE</string>
    <string name="ftu_title_dob">DATE OF BIRTH</string>
    <string name="ftu_title_gender">SEX</string>
    <string name="ftu_title_gps_time_and_time_zone">TIME OF DAY</string>
    <string name="ftu_title_height">HEIGHT</string>
    <string name="ftu_title_language">LANGUAGE</string>
    <string name="ftu_title_time">TIME OF DAY</string>
    <string name="ftu_title_units">UNITS</string>
    <string name="ftu_title_weight">WEIGHT</string>
    <string name="ftu_use_gps_time">USE GPS TIME</string>
    <string name="general_settings_activity_title">GENERAL SETTINGS</string>
    <string name="heading_east">E</string>
    <string name="heading_north">N</string>
    <string name="heading_north_east">NE</string>
    <string name="heading_north_west">NW</string>
    <string name="heading_south">S</string>
    <string name="heading_south_east">SE</string>
    <string name="paused_pause">PAUSED</string>
    <string name="profile_indoor">INDOOR</string>
    <string name="profile_mtb">MTB</string>
    <string name="profile_other">OTHER</string>
    <string name="profile_road">ROAD</string>
    <string name="settings_about_device">ABOUT V650</string>
    <string name="settings_date">DATE</string>
    <string name="settings_language">LANGUAGE</string>
    <string name="settings_map_settings">Maps</string>
    <string name="settings_pairing">PAIRING</string>
    <string name="settings_security_password">SECURITY PASSWORD</string>
    <string name="settings_time">CHANGE TIME OF DAY</string>
    <string name="settings_training_views">TRAINING VIEWS</string>
    <string name="settings_units">UNITS</string>
    <string name="settings_use_gps_time">USE GPS TIME</string>
    <string name="user_info_date_of_birth_title">DATE OF BIRTH</string>
    <string name="user_info_height_title">HEIGHT [%s]</string>
    <string name="user_info_max_hr_title">HR MAX</string>
    <string name="user_info_max_vo2_title">VO2 MAX</string>
    <string name="user_info_resting_hr_title">RESTING HR</string>
    <string name="user_info_sex_title">SEX</string>
    <string name="user_info_weight_title">WEIGHT [%s]</string>
</resources>